# clean-dev-dirs

./: .gitignore  Cargo.toml  README.md  hooksmith.yaml  sonar-project.properties
.github/workflows/: analysis.yaml  ci.yml  release.yaml  rust.yaml
src/: cleaner.rs  cli.rs  executables.rs  filtering.rs  lib.rs  main.rs  output.rs  project.rs  scanner.rs
src/config/: execution.rs  file.rs  filter.rs  mod.rs  scan.rs
src/project/: mod.rs  project.rs  projects.rs
src/utils/: mod.rs  size.rs
tests/: integration_tests.rs
