[package]
name = "clean-dev-dirs"
version = "1.0.0"
edition = "2024"
description = "A fast CLI tool for recursively cleaning Rust target/ and Node.js node_modules/ directories to reclaim disk space"
readme = "README.md"
homepage = "https://github.com/TomPlanche/clean-dev-dirs"
repository = "https://github.com/TomPlanche/clean-dev-dirs"
license = "Apache-2.0 OR MIT"
keywords = ["cli", "cleanup", "rust", "nodejs", "disk-space"]
categories = ["command-line-utilities", "filesystem"]
authors = ["Tom Planche <tomplanche@proton.me>"]

[dependencies]
anyhow = "1.0"
chrono = "0.4.41"
clap = { version = "4.5.39", features = ["derive"] }
colored = "3.0.0"
dialoguer = "0.11.0"
humansize = "2.1.3"
indicatif = "0.17.11"
rayon = "1.10.0"
serde_json = "1.0.140"
walkdir = "2.5.0"
