[package]
authors = ["Tom Planche <tomplanche@proton.me>"]
categories = ["command-line-utilities", "filesystem"]
description = "A fast CLI tool for recursively cleaning Rust target/ and Node.js node_modules/ directories to reclaim disk space"
edition = "2024"
homepage = "https://github.com/TomPlanche/clean-dev-dirs"
include = [
    "/Cargo.toml",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/README.md",
    "/src/**",
]
keywords = ["cli", "cleanup", "rust", "nodejs", "disk-space"]
license = "Apache-2.0 OR MIT"
name = "clean-dev-dirs"
readme = "README.md"
repository = "https://github.com/TomPlanche/clean-dev-dirs"
version = "2.1.0"

[lib]
name = "clean_dev_dirs"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "clean-dev-dirs"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = "0.4.42"
clap = { version = "4.5.49", features = ["derive"] }
colored = "3.0.0"
humansize = "2.1.3"
indicatif = "0.17.11"
inquire = "0.7"
rayon = "1.11.0"
serde_json = "1.0.145"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.23"

[build-dependencies]
hooksmith = "1.15.0"
